--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
         <h2>Funcionamento da Usina</h2>
         <p>A água represada é liberada para girar turbinas conectadas a geradores, convertendo a energia cinética em eletricidade que é transmitida por linhas de alta tensão.</p>
       </div>
-      <div class="section-image" onclick="expandImage('https://i.imgur.com/Mr60m3Z.png')">
-        <img src="https://i.imgur.com/Mr60m3Z.png" alt="Funcionamento" />
+      <div class="section-image" onclick="expandImage('https://imgur.com/HRI90HQ.png')">
+        <img src="https://imgur.com/HRI90HQ.png" alt="Funcionamento" />
         <div class="overlay-text">Expandir</div>
       </div>
     </section>
@@ -368,8 +368,8 @@
         <h2>A Usina de Lajeado</h2>
         <p>Inaugurada em 2001, a UHE Luis Eduardo Magalhães está localizada no rio Tocantins e tem capacidade instalada de 902,5 MW, sendo essencial para o fornecimento de energia à região.</p>
       </div>
-      <div class="section-image" onclick="expandImage('https://i.imgur.com/NT60Qq5.png')">
-        <img src="https://i.imgur.com/NT60Qq5.png" alt="Usina Lajeado" />
+      <div class="section-image" onclick="expandImage('https://imgur.com/f8je7SF.png')">
+        <img src="https://imgur.com/f8je7SF.png" alt="Usina Lajeado" />
         <div class="overlay-text">Expandir</div>
       </div>
     </section>
