--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rio de Energia - Usina Hidrelétrica</title>
   <style>
+    /* Estilos Globais e para Desktop (mantidos como estão) */
     * {
       margin: 0;
       padding: 0;
@@ -117,7 +118,7 @@
     }
 
     /* Navbar para Desktop (mantém a mesma aparência) */
-    .navbar {
+    .navbar-desktop {
         position: sticky;
         top: 0;
         width: 100%;
@@ -126,6 +127,7 @@
         z-index: 1000;
         padding: 15px 0;
         text-align: center;
+        display: block; /* Visível por padrão em desktop */
     }
 
     .navbar-desktop ul {
@@ -178,11 +180,12 @@
         display: block;
     }
 
-    /* Esconde elementos mobile em desktop */
-    .navbar-mobile {
+    /* Esconde o novo navbar mobile em desktop */
+    .navbar-mobile-wrapper {
         display: none;
     }
 
+    /* Seções de Conteúdo (mantidas como estão) */
     section {
       background: white;
       margin: 30px auto;
@@ -312,8 +315,8 @@
       .navbar-desktop {
           display: none;
       }
-      .navbar-mobile {
-          display: block; /* Mostra o novo navbar mobile */
+      .navbar-mobile-wrapper {
+          display: block; /* Mostra o novo wrapper do navbar mobile */
           position: sticky;
           top: 0;
           width: 100%;
@@ -331,12 +334,26 @@
           font-weight: bold;
       }
 
-      .hamburger-icon, .close-mobile-menu {
+      .mobile-hamburger-icon {
           font-size: 1.8em; /* Tamanho do ícone */
           cursor: pointer;
           padding: 5px; /* Área clicável maior */
           user-select: none; /* Evita seleção de texto */
       }
+
+      .mobile-toggle-icon {
+          font-size: 1.8em; /* Tamanho do ícone */
+          cursor: pointer;
+          padding: 5px; /* Área clicável maior */
+          user-select: none; /* Evita seleção de texto */
+          transform: rotate(0deg); /* Começa apontando para direita (seta) */
+          transition: transform 0.3s ease;
+      }
+
+      .mobile-toggle-icon.open {
+          transform: rotate(90deg); /* Gira para baixo quando aberto */
+      }
+
 
       .mobile-menu-content {
           list-style: none;
@@ -351,7 +368,6 @@
 
       .mobile-menu-content.open {
           max-height: 500px; /* Altura suficiente para mostrar todos os itens */
-          /* Você pode ajustar este valor ou usar JavaScript para calcular a altura exata */
       }
 
       .mobile-menu-content li {
@@ -377,9 +393,9 @@
       }
 
       /* Estilos para o dropdown dentro do menu mobile */
-      .mobile-menu-content li.dropdown .dropdown-content {
-          position: static; /* Importante para que o sub-menu apareça abaixo do pai */
-          display: block; /* Sempre visível quando o menu principal está aberto */
+      .mobile-menu-content li.dropdown-mobile-options .dropdown-content-mobile {
+          position: static;
+          display: block; /* Sempre visível quando o menu principal está aberto, mas escondido pelo max-height */
           background-color: #1a237e; /* Cor um pouco diferente para o sub-menu */
           width: 100%;
           box-shadow: none;
@@ -389,17 +405,16 @@
           transition: max-height 0.3s ease-out;
       }
 
-      .mobile-menu-content li.dropdown.active .dropdown-content {
+      .mobile-menu-content li.dropdown-mobile-options.active .dropdown-content-mobile {
           max-height: 200px; /* Altura para mostrar itens do sub-menu */
       }
 
-      .mobile-menu-content li.dropdown .dropdown-content a {
+      .mobile-menu-content li.dropdown-mobile-options .dropdown-content-mobile a {
           padding: 10px 30px; /* Mais indentado */
           font-size: 1em;
       }
 
-
-      /* Demais estilos responsivos existentes */
+      /* Demais estilos responsivos existentes (mantidos como estão) */
       .hero h1 {
         font-size: 2em;
         padding: 0 10px;
@@ -491,7 +506,7 @@
     <a class="button button-scroll" onclick="document.getElementById('o-que-e').scrollIntoView({ behavior: 'smooth' });">Explorar Conteúdo</a>
   </div>
 
-  <nav class="navbar navbar-desktop">
+  <nav class="navbar-desktop">
     <ul>
       <li class="dropdown" onclick="toggleDropdown(this)">
         <a href="javascript:void(0)" class="dropbtn">&#9776; </a>
@@ -510,9 +525,9 @@
     </ul>
   </nav>
 
-  <nav class="navbar-mobile">
-    <div class="mobile-top-bar">
-      <span class="hamburger-icon" onclick="toggleMobileMenu()">&#9776;</span> <span class="close-mobile-menu" onclick="closeMobileMenu()" style="display: none;">&times;</span> </div>
+  <div class="navbar-mobile-wrapper">
+    <nav class="mobile-top-bar">
+      <span class="mobile-hamburger-icon">&#9776;</span> <span class="mobile-toggle-icon" onclick="toggleMobileMenu()">&#9654;</span> </nav>
     <ul class="mobile-menu-content" id="mobileMenu">
       <li><a href="#o-que-e" onclick="closeMobileMenuAndScroll(this)">O que é?</a></li>
       <li><a href="#impactos" onclick="closeMobileMenuAndScroll(this)">Impactos Ambientais</a></li>
@@ -520,15 +535,16 @@
       <li><a href="#desvantagens" onclick="closeMobileMenuAndScroll(this)">Desvantagens</a></li>
       <li><a href="#uhe-lajeado" onclick="closeMobileMenuAndScroll(this)">UHE Lajeado</a></li>
       <li><a href="#curiosidades" onclick="closeMobileMenuAndScroll(this)">Curiosidades</a></li>
-      <li class="dropdown" onclick="toggleDropdownMobile(this)">
-        <a href="javascript:void(0)">&#9776; Opções Extras</a> <div class="dropdown-content">
+      <li class="dropdown-mobile-options" onclick="toggleDropdownMobile(this)">
+        <a href="javascript:void(0)">&#9776; Opções Extras</a>
+        <div class="dropdown-content-mobile">
           <a href="#">Quem somos nós</a>
           <a href="#">Script</a>
           <a href="#">Links</a>
         </div>
       </li>
     </ul>
-  </nav>
+  </div>
 
 
   <div id="conteudo">
@@ -670,10 +686,10 @@
                 return;
             }
 
-            // Fecha o menu mobile se estiver aberto
+            // Fecha o menu mobile se estiver aberto (novo comportamento)
             const mobileMenu = document.getElementById('mobileMenu');
             if (mobileMenu && mobileMenu.classList.contains('open')) {
-                closeMobileMenu();
+                toggleMobileMenu(); // Reusa a função para fechar e alternar o ícone
             }
 
             document.querySelector(targetId).scrollIntoView({
@@ -689,59 +705,36 @@
 
     // Fecha o dropdown de desktop se o usuário clicar fora dele
     window.onclick = function(event) {
-      if (!event.target.matches('.dropbtn') && !event.target.matches('.dropdown-content a')) {
-        var dropdowns = document.getElementsByClassName("dropdown-content");
-        for (var i = 0; i < dropdowns.length; i++) {
-          var openDropdown = dropdowns[i];
-          if (openDropdown.parentElement.classList.contains('active')) {
-            openDropdown.parentElement.classList.remove('active');
+      // Verifica se o evento não veio de um elemento dentro do menu mobile-top-bar
+      if (!event.target.closest('.mobile-top-bar')) {
+        if (!event.target.matches('.dropbtn') && !event.target.matches('.dropdown-content a')) {
+          var dropdowns = document.getElementsByClassName("dropdown-content");
+          for (var i = 0; i < dropdowns.length; i++) {
+            var openDropdown = dropdowns[i];
+            if (openDropdown.parentElement.classList.contains('active')) {
+              openDropdown.parentElement.classList.remove('active');
+            }
           }
         }
       }
     }
 
-    // --- Funções para o novo menu mobile (hambúrguer off-canvas) ---
+    // --- Funções para o novo menu mobile (off-canvas com seta na direita) ---
     function toggleMobileMenu() {
         const mobileMenu = document.getElementById('mobileMenu');
-        const hamburgerIcon = document.querySelector('.hamburger-icon');
-        const closeIcon = document.querySelector('.close-mobile-menu');
+        const toggleIcon = document.querySelector('.mobile-toggle-icon');
 
         mobileMenu.classList.toggle('open');
-        if (mobileMenu.classList.contains('open')) {
-            hamburgerIcon.style.display = 'none';
-            closeIcon.style.display = 'block';
-        } else {
-            hamburgerIcon.style.display = 'block';
-            closeIcon.style.display = 'none';
-            // Garante que o sub-dropdown do mobile também feche
-            const dropdownsMobile = document.querySelectorAll('.mobile-menu-content .dropdown');
+        toggleIcon.classList.toggle('open'); // Altera a seta
+
+        // Fecha o sub-dropdown de "Opções Extras" ao fechar o menu principal
+        if (!mobileMenu.classList.contains('open')) {
+            const dropdownsMobile = document.querySelectorAll('.mobile-menu-content .dropdown-mobile-options');
             dropdownsMobile.forEach(dropdown => dropdown.classList.remove('active'));
         }
     }
 
-    function closeMobileMenu() {
-        const mobileMenu = document.getElementById('mobileMenu');
-        const hamburgerIcon = document.querySelector('.hamburger-icon');
-        const closeIcon = document.querySelector('.close-mobile-menu');
-
-        mobileMenu.classList.remove('open');
-        hamburgerIcon.style.display = 'block';
-        closeIcon.style.display = 'none';
-        // Garante que o sub-dropdown do mobile também feche
-        const dropdownsMobile = document.querySelectorAll('.mobile-menu-content .dropdown');
-        dropdownsMobile.forEach(dropdown => dropdown.classList.remove('active'));
-    }
-
-    // Função para fechar o menu mobile e rolar para a seção (usada nos links do menu mobile)
-    function closeMobileMenuAndScroll(element) {
-        closeMobileMenu();
-        const targetId = element.getAttribute('href');
-        if (targetId && targetId !== '#') {
-            document.querySelector(targetId).scrollIntoView({ behavior: 'smooth' });
-        }
-    }
-
-    // Função para alternar o dropdown dentro do menu mobile
+    // Função para alternar o dropdown "Opções Extras" dentro do menu mobile
     function toggleDropdownMobile(element) {
         element.classList.toggle("active");
     }
